# SaneEngine

./: .gitignore  CMakeLists.txt  main.cpp
dep/Windows/glm/include/glm/: CMakeLists.txt
dep/Windows/glm/include/glm/detail/: _swizzle.hpp
dep/Windows/glm/lib/: glm_static.lib
include/: gl.h
include/se/: gameinstance.h  mylibrary.h
include/se/ecs/: ecs.h  ievent.h  isystem.h  testsystem.h
include/se/ecs/systems/: rendersystem.h
include/se/events/: general.h  input.h
include/se/managers/: mmanager.h  windowmanager.h
include/se/systems/: renderingsystem.h
include/se/utils/: array.h  dlldefines.h  mmanager.h  noncopyable.h
src/: gameinstance.cpp  gl.cpp  mylibrary.cpp
src/ecs/: ievent.cpp  testsystem.cpp
src/managers/: mmanager.cpp  windowmanager.cpp
src/utils/: array.cpp  mmanager.cpp
